Fixed the dark mode js

--- a/home.css
+++ b/home.css
@@ -16,10 +16,23 @@ body.dark-mode {
     background-color: #333;
 }
 
+.dark-mode nav {
+    background-color: rgb(9, 101, 9);
+    color: #333;
+}
+
+.dark-mode nav a {
+    color: #f4f4f4;
+}
+
+.dark-mode nav a:hover {
+    color: rgb(229, 179, 86);
+}
+
 nav {
     position: fixed;
-    width: 100%;
-    top: 5%;
+    width: 95%;
+    top: 4%;
     display: flex;
     justify-content: space-evenly;
     background-color: #553b4a;
@@ -30,39 +43,17 @@ nav {
     text-align: center;
     padding: 1em 0;
     z-index: 100;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 nav a {
+    color: #f4f4f4;
+    text-decoration: none;
     transition: color 0.3s ease;
 }
 nav a:hover {
     color: rgb(229, 179, 86);
 }
-.dark-mode nav{
-    background-color: #553b4a;
-    color: #f4f4f4;
-}
-nav a{
-    color: white;
-    text-decoration: none;
-}
-nav a:hover{
-    color: rgb(229, 179, 86);
-}
-.dark-mode nav a:hover {
-    color: rgb(229, 179, 86);
-}
 
-#themeToggle {
-    position: fixed;
-    top: 5em;
-    right: 1em;
-    font-size: 1.5em;
-    cursor: pointer;
-}
-
-
-#main_heading{
+.main_heading{
     font-size: 250%;
     font-family: 'Lobster', cursive;
     font-weight: bold;
@@ -72,16 +63,16 @@ nav a:hover{
 
 #home{
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
-    padding-top: 5%;
-    align-items: left;
+    margin-top: 5%;
     border-color: #553b4a;
     border-width: .4;
     padding: 2%;
-    align-content: start;
+    align-content: center;
 }
 
-#sub_heading{
+.sub_heading{
     font-size: 150%;
     font-weight: bold;
     color: #553b4a;
@@ -89,13 +80,13 @@ nav a:hover{
 }
 
 #profilepic{
-    width: 200px;
-    height: 200px;
+    width: 30%;
+    height: 30%;
     border-radius: 50%;
-    border: 5px solid #553b4a;
+    border: 3px solid #553b4a;
 }
 #profilepic:hover{
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 #about, #education, #achievements, #skills, #projects, #contact{
@@ -106,10 +97,10 @@ nav a:hover{
     align-items: left;
     border-color: #553b4a;
     border-width: .4;
-    padding-top: 4%;
-    padding-left: 2%;
+    padding: 2%;
     align-content: start;
     font-size: 100%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: left;
 }
+
